--- a/serialCom/serialcom/res/serialCom.ui
+++ b/serialCom/serialcom/res/serialCom.ui
@@ -693,6 +693,9 @@ background-color: rgb(0, 0, 0);</string>
     <property name="text">
      <string>双工位</string>
     </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_6">
