--- a/serialCom/serialcom/res/serialCom.ui
+++ b/serialCom/serialcom/res/serialCom.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1024</width>
-    <height>768</height>
+    <height>725</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,7 +23,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
+     <y>5</y>
      <width>501</width>
      <height>281</height>
     </rect>
@@ -285,7 +285,7 @@ background-color: rgb(0, 0, 0);</string>
    <property name="geometry">
     <rect>
      <x>519</x>
-     <y>10</y>
+     <y>5</y>
      <width>491</width>
      <height>131</height>
     </rect>
@@ -450,7 +450,7 @@ background-color: rgb(0, 0, 0);</string>
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>230</y>
+     <y>225</y>
      <width>491</width>
      <height>131</height>
     </rect>
@@ -536,9 +536,9 @@ background-color: rgb(0, 0, 0);</string>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>300</y>
+     <y>295</y>
      <width>501</width>
-     <height>411</height>
+     <height>381</height>
     </rect>
    </property>
    <property name="font">
@@ -600,7 +600,7 @@ background-color: rgb(0, 0, 0);</string>
       <x>20</x>
       <y>80</y>
       <width>461</width>
-      <height>321</height>
+      <height>291</height>
      </rect>
     </property>
     <property name="font">
@@ -620,10 +620,16 @@ background-color: rgb(0, 0, 0);</string>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>720</y>
-     <width>991</width>
+     <y>680</y>
+     <width>1001</width>
      <height>40</height>
     </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
    </property>
    <property name="font">
     <font>
@@ -640,7 +646,7 @@ background-color: rgb(0, 0, 0);</string>
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>150</y>
+     <y>145</y>
      <width>491</width>
      <height>71</height>
     </rect>
@@ -655,36 +661,23 @@ background-color: rgb(0, 0, 0);</string>
    <property name="title">
     <string>工位选择:</string>
    </property>
-   <widget class="QRadioButton" name="leftRadioBtn">
+   <widget class="QRadioButton" name="singleRadioBtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>60</x>
       <y>30</y>
       <width>120</width>
       <height>30</height>
      </rect>
     </property>
     <property name="text">
-     <string>左工位</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="rightRadioBtn">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>30</y>
-      <width>120</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>右工位</string>
+     <string>单工位</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="bothRadioBtn">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>330</x>
       <y>30</y>
       <width>120</width>
       <height>30</height>
@@ -702,9 +695,9 @@ background-color: rgb(0, 0, 0);</string>
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>370</y>
+     <y>365</y>
      <width>491</width>
-     <height>341</height>
+     <height>311</height>
     </rect>
    </property>
    <property name="font">
@@ -723,7 +716,7 @@ background-color: rgb(0, 0, 0);</string>
       <x>10</x>
       <y>30</y>
       <width>351</width>
-      <height>301</height>
+      <height>271</height>
      </rect>
     </property>
     <property name="font">
@@ -739,7 +732,7 @@ background-color: rgb(0, 0, 0);</string>
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>150</y>
+      <y>130</y>
       <width>110</width>
       <height>50</height>
      </rect>
@@ -758,7 +751,7 @@ background-color: rgb(0, 0, 0);</string>
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>270</y>
+      <y>240</y>
       <width>110</width>
       <height>50</height>
      </rect>
