--- a/serialCom/serialcom/res/serialCom.ui
+++ b/serialCom/serialcom/res/serialCom.ui
@@ -450,7 +450,7 @@ background-color: rgb(0, 0, 0);</string>
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>225</y>
+     <y>150</y>
      <width>491</width>
      <height>131</height>
     </rect>
@@ -556,7 +556,7 @@ background-color: rgb(0, 0, 0);</string>
      <rect>
       <x>170</x>
       <y>30</y>
-      <width>181</width>
+      <width>211</width>
       <height>35</height>
      </rect>
     </property>
@@ -584,14 +584,17 @@ background-color: rgb(0, 0, 0);</string>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>390</x>
       <y>30</y>
-      <width>121</width>
+      <width>91</width>
       <height>35</height>
      </rect>
     </property>
     <property name="text">
-     <string>( 个 / 组 )</string>
+     <string>(个/组)</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QListWidget" name="dataListPanel">
@@ -642,62 +645,13 @@ background-color: rgb(0, 0, 0);</string>
     <string>信息:</string>
    </property>
   </widget>
-  <widget class="QGroupBox" name="groupBox_5">
-   <property name="geometry">
-    <rect>
-     <x>520</x>
-     <y>145</y>
-     <width>491</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>15</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="title">
-    <string>工位选择:</string>
-   </property>
-   <widget class="QRadioButton" name="singleRadioBtn">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>30</y>
-      <width>120</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>单工位</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="bothRadioBtn">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>30</y>
-      <width>120</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>双工位</string>
-    </property>
-    <property name="checked">
-     <bool>true</bool>
-    </property>
-   </widget>
-  </widget>
   <widget class="QGroupBox" name="groupBox_6">
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>365</y>
+     <y>295</y>
      <width>491</width>
-     <height>311</height>
+     <height>381</height>
     </rect>
    </property>
    <property name="font">
@@ -714,9 +668,9 @@ background-color: rgb(0, 0, 0);</string>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
-      <width>351</width>
-      <height>271</height>
+      <y>80</y>
+      <width>471</width>
+      <height>291</height>
      </rect>
     </property>
     <property name="font">
@@ -731,10 +685,10 @@ background-color: rgb(0, 0, 0);</string>
    <widget class="QPushButton" name="preBtn">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>130</y>
-      <width>110</width>
-      <height>50</height>
+      <x>190</x>
+      <y>25</y>
+      <width>120</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="focusPolicy">
@@ -750,10 +704,10 @@ background-color: rgb(0, 0, 0);</string>
    <widget class="QPushButton" name="nextBtn">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>240</y>
-      <width>110</width>
-      <height>50</height>
+      <x>360</x>
+      <y>25</y>
+      <width>120</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="focusPolicy">
@@ -769,10 +723,10 @@ background-color: rgb(0, 0, 0);</string>
    <widget class="QPushButton" name="currBtn">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>40</y>
-      <width>110</width>
-      <height>50</height>
+      <x>10</x>
+      <y>25</y>
+      <width>120</width>
+      <height>45</height>
      </rect>
     </property>
     <property name="text">
